# dera

./: Cargo.toml
dera-local/: Cargo.toml
dera-local/src/: init.rs  lib.rs  server.rs
dera-mpi/: Cargo.toml
dera-mpi/examples/: comm.rs
dera-mpi/src/: init.rs  lib.rs  rqm.rs  server.rs  worker.rs
dera-tests/: Cargo.toml
dera/src/: lib.rs  object.rs  s_manager.rs  transport.rs  w_manager.rs
dera/src/common/: mod.rs
examples/: ping.rs
src/: lib.rs  s_manager.rs  transport.rs  worker.rs
src/local/: init.rs  mod.rs  server.rs  worker.rs
src/manager/: mod.rs  object.rs  s_manager.rs  transport.rs  w_manager.rs  worker.rs
src/mpi/: common.rs  core.rs  init.rs  rqm.rs  server.rs  worker.rs
src/tests/: mod.rs  starter.rs
